[gd_scene load_steps=7 format=2]

[ext_resource path="res://Buttons/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Buttons/NewGameButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Screens/titleGame.png" type="Texture" id=3]
[ext_resource path="res://Screens/Titlescreen.gd" type="Script" id=4]
[ext_resource path="res://Screens/FadeIn.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 31.0
margin_right = 300.0
margin_bottom = 181.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_left = 90.0
margin_right = 290.0
margin_bottom = 70.0
texture = ExtResource( 3 )

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 74.0
margin_right = 280.0
margin_bottom = 115.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 280.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]

[node name="NewButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
visible = false
margin_top = 24.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="Menu"]
margin_top = 119.0
margin_right = 280.0
margin_bottom = 150.0
text = "Use arrows or wasd to move
Don't let them see you"

[node name="FadeIn" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn"]
anims/FadeIn = SubResource( 1 )

[connection signal="fade_in_finished" from="FadeIn" to="." method="_on_FadeIn_fade_in_finished"]
